@@ -153,7 +153,8 @@ This options are editable at run time. (Menu: Setup > Plugin > imonlcd ... )
 * Margin time at wake up (min)
   - Define a margin time, if wake up on exit mode used. (Default: 5 minutes)
 
-
+* Suspend display at night
+  - Allow turn display off at night, depends selected mode and time frame.
 
 Plugin SVDRP commands
 ---------------------
